Adjusted excerpt number due to grid layout breaking due to word-wrap issues.

--- a/tfs-call-to-action/src/block/editor.css
+++ b/tfs-call-to-action/src/block/editor.css
@@ -10,7 +10,6 @@
   color: #000;
   margin: 0 auto;
   max-width: 740px;
-  padding: 2rem;
-}
+  padding: 2rem; }
 
 /*# sourceMappingURL=editor.css.map */
